# kra-analysis

./: .dockerignore  .eslintrc.json  .gitignore  .gitleaks.toml  .gitmessage  .lintstagedrc  .pre-commit-config.yaml  AGENTS.md  AUTORESEARCH_INVALIDATION.md  AUTORESEARCH_PILOT.md  AUTORESEARCH_PROMPT.txt  AUTORESEARCH_PROMPT_500.txt  AUTORESEARCH_PROMPT_ONE_ITERATION.txt  AUTORESEARCH_RUNBOOK.md  CLAUDE.md  CONTEXT.md  RALPH_PROMPT.md  README-turborepo.md  README.md  UBIQUITOUS_LANGUAGE.md  autoresearch-results-clean-v2.tsv  autoresearch-results.tsv  fix_fstrings.py  package.json  pnpm-lock.yaml  progress.txt  pyproject.toml  ralph.sh  ralph.yaml  renovate.json  run_autoresearch_loop.sh  run_autoresearch_supervisor.py  run_autoresearch_supervisor.sh  skills-lock.json  tasks.md  turbo.json
api/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  config.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fastapi-v2-comprehensive-analysis-report.md  main_v2.py  pyproject.toml  requirements.txt  run_tests.py  test_api.py
api/dependencies/: auth.py
api/docs/: migration-validation-report.md
api/infrastructure/: celery_app.py  database.py  redis_client.py  supabase_client.py
api/infrastructure/kra_api/: client.py
api/middleware/: logging.py  rate_limit.py
api/models/: collection_dto.py  database_models.py  job_dto.py
api/routers/: collection_v2.py  jobs_v2.py
api/services/: collection_service.py  kra_api_service.py  race_service.py
api/tasks/: collection_tasks.py
api/tests/: __init__.py  conftest.py  test_data_validation.py  test_smoke.py
api/tests/integration/: __init__.py
api/tests/utils/: __init__.py
api/utils/: field_mapping.py
apps/api/: .coveragerc  .dockerignore  .env.example  .env.template  Dockerfile  Makefile  README-simplified.md  README-uv.md  README.md  alembic.ini  config.py  coverage.xml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  main_v2.py  openapi_example.yaml  package.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_api.py  turbo.json
apps/api/adapters/: __init__.py  kra_response_adapter.py  race_projection_adapter.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260222_000001_baseline_schema.py
apps/api/bootstrap/: __init__.py  runtime.py
apps/api/dependencies/: auth.py
apps/api/docs/: LEGACY_V1_POLICY.md  QUICK_START.md  SUPABASE_SETUP.md  database-connection-issue.md
apps/api/infrastructure/: background_tasks.py  celery_app.py  database.py  migration_manifest.py  redis_client.py  supabase_client.py
apps/api/infrastructure/claude_cli/: client.py
apps/api/infrastructure/job_runner/: __init__.py  base.py  celery_runner.py  factory.py  inprocess_runner.py
apps/api/infrastructure/kra_api/: client.py  core.py  source_parser.py
apps/api/infrastructure/prerace_sources/: __init__.py  base.py  catalog.py  changes.py  entry.py  profiles.py  track.py
apps/api/middleware/: logging.py  policy_accounting.py  rate_limit.py
apps/api/migrations/: 001_initial_schema.sql  001_unified_schema.sql  002_add_missing_columns.sql  002_add_prediction_created_by.sql  003_add_job_shadow_fields.sql  003_add_race_odds.sql  003_align_with_sqlalchemy_models.sql  004_add_job_shadow_fields.sql  004_add_usage_events.sql  006_canonical_job_status_backfill.sql  007_runtime_db_hardening.sql
apps/api/models/: collection_dto.py  database_models.py  job_dto.py  predict_dto.py  race_dto.py
apps/api/monitoring/: metrics.py
apps/api/pipelines/: __init__.py  base.py  data_pipeline.py  stages.py
apps/api/policy/: __init__.py  accounting.py  authentication.py  authorization.py  principal.py
apps/api/routers/: collection_v2.py  health.py  jobs_v2.py  metrics.py  predict.py  race.py
apps/api/scripts/: apply_migrations.py  archive_race_odds.py  batch_backfill.py  capture_entry_change_bulletin.py  check_collection_status_db.py  quick_test.py  reconcile_existing_supabase_schema.py  run_quality_ci.sh  setup.sh  test_db_connection.py
apps/api/services/: collection_enrichment.py  collection_preprocessing.py  collection_service.py  collection_status_diagnostics.py  collection_workflow.py  job_contract.py  job_service.py  kra_api_service.py  kra_collection_module.py  prediction_service.py  prerace_field_tagging.py  prerace_postprocessing.py  prerace_storage_policy.py  race_processing_workflow.py  race_service.py  result_collection_service.py
apps/api/tasks/: async_tasks.py  celery_app.py  celery_tasks.py  collection_tasks.py
apps/api/tests/: __init__.py  conftest.py  test_api.py  test_data_validation.py  test_kra_api.py  test_nodejs_comparison.py  test_smoke.py
apps/api/tests/integration/: __init__.py  test_api_endpoints.py  test_bootstrap_manifest.py  test_collection_workflow_router.py  test_jobs_celery_mode.py  test_jobs_router.py  test_jobs_v2_router_additional.py  test_main_endpoints.py  test_policy_accounting.py  test_prerace_storage_pipeline.py  test_startup_manifest_rejection.py
apps/api/tests/platform/: __init__.py  fixtures.py
apps/api/tests/unit/: __init__.py  test_additional_coverage.py  test_archive_race_odds.py  test_async_tasks.py  test_async_tasks_helpers.py  test_auth.py  test_auth_deps.py  test_auth_expired_key.py  test_auth_extended.py  test_auth_resource_access.py  test_auth_token_paths.py  test_background_tasks.py  test_batch_backfill.py  test_cache_service_fail_open.py  test_capture_entry_change_bulletin.py  test_collection_enrichment_module.py  test_collection_new_apis.py  test_collection_partial_failure.py  test_collection_preprocessing_rules.py  test_collection_result_router.py  test_collection_router_errors.py  test_collection_router_more_errors.py  test_collection_service.py  test_collection_service_coverage.py  test_collection_service_edge_cases.py  test_collection_service_enrich.py  test_collection_service_helpers.py  test_collection_service_more.py  test_collection_service_past_perf.py  test_collection_service_stats.py  (+63 more)
apps/api/utils/: __init__.py  database_url.py  field_mapping.py  prerace_entry_normalizer.py
(+1044 files in other folders)
